# AberMUD2

./: .gitignore  LICENCE  README  README.md
mud/: ABERMUD_MANUAL  CMakeLists.txt  MANIFEST  System.h  TOBEDONE  anachronisms.h  bbc.c  bit_flags  blib.c  blood.c  bprintf.c  doors  extra.c  files.h  flock.c  flock.h  frob.c  functions.h  gamego.c  gmain2.c  gmainstubs.c  gmlnk.c  install.sh  install2.sh  key.c  magic.c  make.h.c  makeexe  makemud  makeuaf.c  makeworld.c  makeworld.util  mobile.c  ndebug.c  new1.c  newuaf.c  ob.in  obdat.c  object.h  objsys.c  (+12 more)
mud/EXAMINES/: 1  104  109  11  110  115  119  12  126  13  131  132  134  136  139  143  146  147  148  149  150  151  155  160  162  164  165  168  171  172  18  19  2  20  21  22  23  24  25  26  (+28 more)
mud/TEXT/: credits  gmotd2  gwiz  help1  help2  help3  level.txt  wiz.list
mud/TEXT/ROOMS/: 1  100  101  102  103  104  1050  1051  1052  1053  1054  1055  1056  1057  1058  1059  106  1060  1061  1062  1063  1064  1065  1066  1067  107  1070  1071  1072  1073  1074  1075  1076  1077  1078  1079  1080  1081  1082  109  (+224 more)
